CSS changes - mainly to avoid grid gap (see comment in code)

--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,11 @@
     margin: 0;
     padding: 0;
     --square-size: 50px;
+
+    --board-background: rgb(100,0,0); /* Dark brown*/
+    --board-black-squares: rgb(165 42 42); /* brown */
+    --board-white-square:  rgb(255 248 220); /* cornsilk */
+    --active-square-highlight: rgb(200 200 100); /* dark yellow */
 }
 
 #root {
@@ -52,8 +57,7 @@
 .board {
     justify-items: center;
     align-items: center;
-    background-color: rgb(100,0,0); /* Dark brown*/
-    grid-gap: 2px;
+    background-color: var(--board-background);
 }
 
 .square-placeholder {
@@ -67,12 +71,17 @@
     height: 100%;
 }
 
+.black-square, .white-square {
+    /* Use border rather tha grid-gap to avoid 'dead' areas that are not 
+    drag targets */
+    border: 1px solid var(--board-background);
+}
 .black-square {
-    background-color: rgb(165 42 42); /* brown */
+    background-color: var(--board-black-squares); /* brown */
 }
 
 .white-square {
- background-color:  rgb(255 248 220); /* cornsilk */ 
+ background-color: var(--board-white-squares); /* cornsilk */ 
 }
 
 .board-boarder {
@@ -104,7 +113,7 @@
 }
 
 .board .square:hover:active  {
-    border: 4px solid rgb(200 200 100);
+    border: 4px solid --var(active-square-highlight);
     background-color: none;
 }
 
